kustomize/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-ingressroute
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.kgb.birtdata.com`)
      kind: Rule
      services:
        - name: immich-server
          port: 3001
  tls:
    secretName: immich-tls
